removed html extension

--- a/work.html
+++ b/work.html
@@ -36,19 +36,19 @@
                     </div>
                     <div class="flex flex-1 items-center justify-between">
                         <div class="flex flex-shrink-0 items-center">
-                            <a href="index.html"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
+                            <a href="index"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
                         </div>
                         <div class="hidden md:ml-6 md:block">
                             <div class="flex space-x-4 text-white">
-                                <a href="work.html" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
-                                <a href="about.html" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
-                                <a href="index.html#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
+                                <a href="work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
+                                <a href="about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
+                                <a href="index#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
                                 <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Blog</a>
-                                <a href="contact.html" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
+                                <a href="contact" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
                             </div>
                         </div>
                         <div class="hidden md:block">
-                            <a href="contact.html" class="inline-flex items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400">Hire Me <i class="las la-arrow-right ml-2 text-3xl"></i></a>
+                            <a href="contact" class="inline-flex items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400">Hire Me <i class="las la-arrow-right ml-2 text-3xl"></i></a>
                         </div>
                     </div>
                 </div>
@@ -364,7 +364,7 @@
                 <p class="mb-4 uppercase tracking-widest">Need A Designer?</p>
                 <h1 class="mb-4 text-center text-3xl lg:text-6xl">Let's make something together</h1>
                 <p class="mx-auto max-w-3xl text-lg font-light lg:text-2xl">I help businesses, organizations and individuals from around the world bring their projects to life. I would love to help you too.</p>
-                <a href="contact.html" class="mt-8 inline-flex items-center justify-center rounded-full bg-white px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-100">Start a project <i class="las la-arrow-right ml-2 text-3xl"></i></a>
+                <a href="contact" class="mt-8 inline-flex items-center justify-center rounded-full bg-white px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-100">Start a project <i class="las la-arrow-right ml-2 text-3xl"></i></a>
                 <!--Social Icons-->
                 <ul class="mt-10 flex justify-center space-x-4">
                     <li>
