--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,13 @@
                     </div>
                     <div class="flex flex-1 items-center justify-between">
                         <div class="flex flex-shrink-0 items-center">
-                            <a href="index"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
+                            <a href="/"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
                         </div>
                         <div class="hidden md:ml-6 md:block">
                             <div class="flex space-x-4 text-white">
                                 <a href="work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
                                 <a href="about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
-                                <a href="index#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
+                                <a href="/#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
                                 <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Blog</a>
                                 <a href="contact" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
                             </div>
