--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="flex flex-1 items-center justify-between">
                         <div class="flex flex-shrink-0 items-center">
-                            <a href="index"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
+                            <a href="/"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
                         </div>
                         <div class="hidden md:ml-6 md:block">
                             <div class="flex space-x-4 text-white">
