Change About Info

--- a/about.html
+++ b/about.html
@@ -73,9 +73,8 @@
                 <div class="grid grid-cols-2 items-center gap-8">
                     <div>
                         <h1 class="text-4xl lg:text-6xl">Hi! I am Milan</h1>
-                        <p class="mb-4">I am award-winning product designer specialized in UX/UI, currently living in Rome, Italy, where I have been working as a freelancer for about 7 years. I work from the user experience to the visual details and then transform these in working code. I am a minimal designer and I really like the simple and elegant style. I Worked with a range of clients focusing on web apps and platforms with HCL in partnership with IBM.</p>
-                        <p class="mb-4">I am the founder of Persona team a collective of corious people with a particular focus for design and development. My design is also featured in the book Interactive Design for Screen from Sandu Publishing.</p>
-                        <p>From 2019 I'm Toptal Designer and from 2020 a judge for CSSfox.</p>
+                        <p class="mb-4">A UI/UX Senior Designer for Web & Mobile, with over 15 years' experience in the field of design - I am passionate about what I do. I follow my client's vision and meet their exact needs in order to deliver that dream-come-true result. I enjoy bringing your ideas to life.
+                        </p>
                     </div>
                     <div>
                         <img src="assets/images/about-photo.jpg" alt="" class="aspect-square rounded-3xl object-cover object-top" />
