--- a/about.html
+++ b/about.html
@@ -73,8 +73,7 @@
                 <div class="grid grid-cols-2 items-center gap-8">
                     <div>
                         <h1 class="text-4xl lg:text-6xl">Hi! I am Milan</h1>
-                        <p class="mb-4">A UI/UX Senior Designer for Web & Mobile, with over 15 years' experience in the field of design - I am passionate about what I do. I follow my client's vision and meet their exact needs in order to deliver that dream-come-true result. I enjoy bringing your ideas to life.
-                        </p>
+                        <p class="mb-4">A UI/UX Senior Designer for Web & Mobile, with over 15 years' experience in the field of design - I am passionate about what I do. I follow my client's vision and meet their exact needs in order to deliver that dream-come-true result. I enjoy bringing your ideas to life.</p>
                     </div>
                     <div>
                         <img src="assets/images/about-photo.jpg" alt="" class="aspect-square rounded-3xl object-cover object-top" />
