--- a/index.html
+++ b/index.html
@@ -320,18 +320,19 @@
         <div class="py-16 lg:py-32" id="services">
             <div class="mx-auto max-w-7xl px-4 text-center">
                 <h1 class="mb-4 text-center text-4xl lg:text-6xl">Areas of Expertise</h1>
-                <p class="text-lg font-light lg:text-2xl">I worked both with agencies and independently.</p>
+                <p class="text-lg font-light lg:text-2xl">Elevating Businesses Through Innovative Design Solutions and Seamless User Experiences</p>
                 <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-3 lg:mt-16">
                     <div>
                         <img src="assets/images/icon-product.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-center text-3xl">Product Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>User Interface (UI) Design</li>
+                            <li>User Experience (UX) Design</li>
+                            <li>Interaction Design</li>
+                            <li>Industrial Design</li>
+                            <li>Prototyping and Wireframing</li>
+                            <li>Usability Testing</li>
+                            <li>Product Redesign and Enhancement</li>
                         </ul>
                     </div>
 
@@ -340,24 +341,26 @@
                         <img src="assets/images/icon-web.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-3xl">Website Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>Responsive Web Design</li>
+                            <li>E-commerce Website Design</li>
+                            <li>Landing Page Design</li>
+                            <li>Blog and Content Website Design</li>
+                            <li>Information Architecture</li>
+                            <li>Mobile Website Design</li>
+                            <li>Website Redesign and Optimization</li>
                         </ul>
                     </div>
                     <div>
                         <img src="assets/images/icon-brand.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-3xl">Brand Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>Logo Design</li>
+                            <li>Brand Identity Design</li>
+                            <li>Print Design</li>
+                            <li>Packaging Design</li>
+                            <li>Typography Design</li>
+                            <li>Color Palette Development</li>
+                            <li>Brand Guidelines Creation</li>
                         </ul>
                     </div>
                 </div>
@@ -429,59 +432,35 @@
                                     <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri's web design services are exceptional! They transformed my vision into a stunning, user-friendly website.</p>
+                                            <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Nikolay Stan</h3>
+                                            <h3 class="text-2xl lg:text-3xl">Slesha</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">My Darling Food</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Influencer</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">Suman</h3>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri has outstanding UX/UI skills and always makes beautiful user-friendly designs. He has a very good eye for detail and can easily transform ideas into reality, regardless of the complexity of user requirements.</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Galin Taylor</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO of Zigwave</p>
                                         </div>
                                     </div>
                                 </li>
