--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Milan Manandhar - Contact</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -72,7 +73,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-2 items-center gap-16">
                     <div>
-                        <h1 class="text-4xl lg:text-6xl mb-4">Hey there! I am Milan</h1>
+                        <h1 class="mb-4 text-4xl lg:text-6xl">Hey there! I am Milan</h1>
                         <p class="mb-4">A seasoned UI/UX Senior Designer, and I've been diving into the world of design for over 15 years. What keeps me going? The thrill of turning your ideas into something incredible. Your vision is my guide, and I work hard to make sure every detail meets your expectations.</p>
 
                         <p class="mb-4">Design, for me, is more than just creating a visually pleasing experience. It's about crafting a space where your dreams come alive. I love the challenge of bringing your thoughts to reality, whether it's a sleek website or a user-friendly mobile app.</p>
