--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Milan Manandhar</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -12,14 +13,14 @@
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
 
-    <body>
+    <body :class="{ 'block shadow-3xl': isOpen, 'hidden': !isOpen }" @click.away="isOpen = false" x-show.transition="true">
         <!--Navigation-->
         <nav class="fixed z-50 w-full bg-transparent py-6 transition-all duration-300 ease-in-out">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="relative flex items-center justify-between">
                     <div class="absolute inset-y-0 right-0 flex items-center md:hidden">
                         <!-- Mobile menu button-->
-                        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+                        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" @click="openMenu = !openMenu" :aria-expanded="openMenu" aria-controls="mobile-navigation" aria-label="Navigation Menu">
                             <span class="absolute -inset-0.5"></span>
                             <span class="sr-only">Open main menu</span>
                             <!--Icon when menu is closed.
@@ -38,7 +39,7 @@
                         <div class="flex flex-shrink-0 items-center">
                             <a href="/"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
                         </div>
-                        <div class="hidden md:ml-6 md:block">
+                        <div class="hidden md:ml-6 md:block" :class="{ 'block shadow-3xl': isOpen, 'hidden': !isOpen }" @click.away="isOpen = false" x-show.transition="true">
                             <div class="flex space-x-4 text-white">
                                 <a href="work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
                                 <a href="about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
@@ -52,6 +53,31 @@
                         </div>
                     </div>
                 </div>
+                <!-- Pop Out Navigation -->
+                <nav id="mobile-navigation" class="fixed bottom-0 left-0 right-0 top-0 z-10 backdrop-blur-sm" :class="openMenu ? 'visible' : 'invisible' " x-cloak>
+                    <!-- UL Links -->
+                    <ul class="absolute bottom-0 right-0 top-0 z-10 w-10/12 bg-white py-4 drop-shadow-2xl transition-all" :class="openMenu ? 'translate-x-0' : 'translate-x-full'">
+                        <li class="border-b border-inherit">
+                            <a href="#" class="block p-4" aria-current="true">Home</a>
+                        </li>
+                        <li class="border-b border-inherit">
+                            <a href="#" class="block p-4">About</a>
+                        </li>
+                        <li class="border-b border-inherit">
+                            <a href="#" class="block p-4">Articles</a>
+                        </li>
+                        <li class="border-b border-inherit">
+                            <a href="#" class="block p-4">Contact</a>
+                        </li>
+                    </ul>
+
+                    <!-- Close Button -->
+                    <button class="absolute bottom-0 left-0 right-0 top-0" @click="openMenu = !openMenu" :aria-expanded="openMenu" aria-controls="mobile-navigation" aria-label="Close Navigation Menu">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="absolute left-2 top-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </nav>
             </div>
         </nav>
 
@@ -210,7 +236,7 @@
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2013</p>
+                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2023</p>
                                 <h3 class="mb-4 text-3xl">The Cliff Nepal</h3>
                             </div>
                             <img src="assets/images/cliff-showcase.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
@@ -319,18 +345,19 @@
         <div class="py-16 lg:py-32" id="services">
             <div class="mx-auto max-w-7xl px-4 text-center">
                 <h1 class="mb-4 text-center text-4xl lg:text-6xl">Areas of Expertise</h1>
-                <p class="text-lg font-light lg:text-2xl">I worked both with agencies and independently.</p>
+                <p class="text-lg font-light lg:text-2xl">Elevating Businesses Through Innovative Design Solutions and Seamless User Experiences</p>
                 <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-3 lg:mt-16">
                     <div>
                         <img src="assets/images/icon-product.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-center text-3xl">Product Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>User Interface (UI) Design</li>
+                            <li>User Experience (UX) Design</li>
+                            <li>Interaction Design</li>
+                            <li>Industrial Design</li>
+                            <li>Prototyping and Wireframing</li>
+                            <li>Usability Testing</li>
+                            <li>Product Redesign and Enhancement</li>
                         </ul>
                     </div>
 
@@ -339,24 +366,26 @@
                         <img src="assets/images/icon-web.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-3xl">Website Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>Responsive Web Design</li>
+                            <li>E-commerce Website Design</li>
+                            <li>Landing Page Design</li>
+                            <li>Blog and Content Website Design</li>
+                            <li>Information Architecture</li>
+                            <li>Mobile Website Design</li>
+                            <li>Website Redesign and Optimization</li>
                         </ul>
                     </div>
                     <div>
                         <img src="assets/images/icon-brand.svg" alt="" class="mx-auto mb-4" />
                         <h3 class="mb-3 text-3xl">Brand Design</h3>
                         <ul class="list-inside leading-loose">
-                            <li>Mobile Apps</li>
-                            <li>Dashboards</li>
-                            <li>B2B Software</li>
-                            <li>UI Design</li>
-                            <li>UX Design</li>
-                            <li>Wireframing</li>
+                            <li>Logo Design</li>
+                            <li>Brand Identity Design</li>
+                            <li>Print Design</li>
+                            <li>Packaging Design</li>
+                            <li>Typography Design</li>
+                            <li>Color Palette Development</li>
+                            <li>Brand Guidelines Creation</li>
                         </ul>
                     </div>
                 </div>
@@ -428,59 +457,35 @@
                                     <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri's web design services are exceptional! They transformed my vision into a stunning, user-friendly website.</p>
+                                            <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Nikolay Stan</h3>
+                                            <h3 class="text-2xl lg:text-3xl">Slesha</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">My Darling Food</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Influencer</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">Suman</h3>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri has outstanding UX/UI skills and always makes beautiful user-friendly designs. He has a very good eye for detail and can easily transform ideas into reality, regardless of the complexity of user requirements.</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Galin Taylor</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO of Zigwave</p>
                                         </div>
                                     </div>
                                 </li>
@@ -547,6 +552,8 @@
                 <p class="text-sm text-green-800">Designed & Coded with <i class="las la-heart animate-heart-beat text-red-600 opacity-100"></i> by Milan Manandhar</p>
             </div>
         </footer>
+
+        <script src="//unpkg.com/alpinejs" defer></script>
 
         <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
         <script>
