Change all titles

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Milan Manandhar - Contact</title>
+        <title>Milan Manandhar - About Me</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -62,7 +63,7 @@
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center py-20 text-center text-white">
                     <h1 class="text-3xl font-bold md:text-5xl xl:text-8xl">About Me</h1>
 
-                    <p class="mt-4 text-lg font-light lg:text-2xl">A collection of some of my favorite Design projects from the past few years.</p>
+                    <p class="mt-4 text-lg font-light lg:text-2xl">Passionate UI/UX Senior Designer dedicated to turning visions into vibrant, user-friendly experiences</p>
                 </div>
             </div>
         </main>
@@ -70,15 +71,16 @@
         <!--About-->
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
-                <div class="grid grid-cols-2 items-center gap-8">
+                <div class="grid grid-cols-2 items-center gap-16">
                     <div>
-                        <h1 class="text-4xl lg:text-6xl">Hi! I am Milan</h1>
-                        <p class="mb-4">I am award-winning product designer specialized in UX/UI, currently living in Rome, Italy, where I have been working as a freelancer for about 7 years. I work from the user experience to the visual details and then transform these in working code. I am a minimal designer and I really like the simple and elegant style. I Worked with a range of clients focusing on web apps and platforms with HCL in partnership with IBM.</p>
-                        <p class="mb-4">I am the founder of Persona team a collective of corious people with a particular focus for design and development. My design is also featured in the book Interactive Design for Screen from Sandu Publishing.</p>
-                        <p>From 2019 I'm Toptal Designer and from 2020 a judge for CSSfox.</p>
+                        <h1 class="mb-4 text-4xl lg:text-6xl">Hey there! I am Milan</h1>
+                        <p class="mb-4">A seasoned UI/UX Senior Designer, and I've been diving into the world of design for over 15 years. What keeps me going? The thrill of turning your ideas into something incredible. Your vision is my guide, and I work hard to make sure every detail meets your expectations.</p>
+
+                        <p class="mb-4">Design, for me, is more than just creating a visually pleasing experience. It's about crafting a space where your dreams come alive. I love the challenge of bringing your thoughts to reality, whether it's a sleek website or a user-friendly mobile app.</p>
+                        <p class="mb-4">My goal is to take the hassle out of design for you. We'll work together to make the process enjoyable and stress-free. Let's collaborate and make your concepts not only look good but work seamlessly too. Ready to turn your ideas into something amazing?</p>
                     </div>
                     <div>
-                        <img src="assets/images/about-photo.jpg" alt="" class="aspect-square rounded-3xl object-cover object-top" />
+                        <img src="assets/images/about-photo.jpg" alt="" class="aspect-square rounded-full object-cover object-top" />
                     </div>
                 </div>
             </div>
@@ -134,18 +136,19 @@
             <div class="rounded-b-3xl bg-white py-16 lg:rounded-b-[80px] lg:py-32">
                 <div class="mx-auto max-w-7xl px-4 text-center">
                     <h1 class="mb-4 text-center text-4xl lg:text-6xl">Areas of Expertise</h1>
-                    <p class="text-lg font-light lg:text-2xl">I worked both with agencies and independently.</p>
+                    <p class="text-lg font-light lg:text-2xl">Elevating Businesses Through Innovative Design Solutions and Seamless User Experiences</p>
                     <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-3 lg:mt-16">
                         <div>
                             <img src="assets/images/icon-product.svg" alt="" class="mx-auto mb-4" />
                             <h3 class="mb-3 text-center text-3xl">Product Design</h3>
                             <ul class="list-inside leading-loose">
-                                <li>Mobile Apps</li>
-                                <li>Dashboards</li>
-                                <li>B2B Software</li>
-                                <li>UI Design</li>
-                                <li>UX Design</li>
-                                <li>Wireframing</li>
+                                <li>User Interface (UI) Design</li>
+                                <li>User Experience (UX) Design</li>
+                                <li>Interaction Design</li>
+                                <li>Industrial Design</li>
+                                <li>Prototyping and Wireframing</li>
+                                <li>Usability Testing</li>
+                                <li>Product Redesign and Enhancement</li>
                             </ul>
                         </div>
 
@@ -154,24 +157,26 @@
                             <img src="assets/images/icon-web.svg" alt="" class="mx-auto mb-4" />
                             <h3 class="mb-3 text-3xl">Website Design</h3>
                             <ul class="list-inside leading-loose">
-                                <li>Mobile Apps</li>
-                                <li>Dashboards</li>
-                                <li>B2B Software</li>
-                                <li>UI Design</li>
-                                <li>UX Design</li>
-                                <li>Wireframing</li>
+                                <li>Responsive Web Design</li>
+                                <li>E-commerce Website Design</li>
+                                <li>Landing Page Design</li>
+                                <li>Blog and Content Website Design</li>
+                                <li>Information Architecture</li>
+                                <li>Mobile Website Design</li>
+                                <li>Website Redesign and Optimization</li>
                             </ul>
                         </div>
                         <div>
                             <img src="assets/images/icon-brand.svg" alt="" class="mx-auto mb-4" />
                             <h3 class="mb-3 text-3xl">Brand Design</h3>
                             <ul class="list-inside leading-loose">
-                                <li>Mobile Apps</li>
-                                <li>Dashboards</li>
-                                <li>B2B Software</li>
-                                <li>UI Design</li>
-                                <li>UX Design</li>
-                                <li>Wireframing</li>
+                                <li>Logo Design</li>
+                                <li>Brand Identity Design</li>
+                                <li>Print Design</li>
+                                <li>Packaging Design</li>
+                                <li>Typography Design</li>
+                                <li>Color Palette Development</li>
+                                <li>Brand Guidelines Creation</li>
                             </ul>
                         </div>
                     </div>
