--- a/work.html
+++ b/work.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Milan Manandhar</title>
+        <title>Milan Manandhar - Works</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -266,59 +267,35 @@
                                     <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri's web design services are exceptional! They transformed my vision into a stunning, user-friendly website.</p>
+                                            <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Nikolay Stan</h3>
+                                            <h3 class="text-2xl lg:text-3xl">Slesha</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">My Darling Food</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Influencer</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                        <div class="mb-4">
+                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
+                                            <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
+                                        </div>
+                                        <div class="mt-auto">
+                                            <h3 class="text-2xl lg:text-3xl">Suman</h3>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>We are extremely grateful to Valerie for perfect job that he did for us. For attention to detail, dedication and professional advices. Work and communication with him is extremely pleasant and fast. Valerie, thank you and good luck!</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Maria Banchev</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO and Co-Founder</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
-                                        <div class="mb-4">
-                                            <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Valeri has outstanding UX/UI skills and always makes beautiful user-friendly designs. He has a very good eye for detail and can easily transform ideas into reality, regardless of the complexity of user requirements.</p>
-                                        </div>
-                                        <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Galin Taylor</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">CEO of Zigwave</p>
                                         </div>
                                     </div>
                                 </li>
