New Testimonial from Dan

--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
                                     <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
-                                            <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
+                                            <p>Collaborating with Milan on multiple projects has been an absolute pleasure. His incredible design talent and technical know-how have made a huge difference in our projects. Milan goes above and beyond to make sure everything aligns perfectly with our vision, making every step of the process smooth and enjoyable. He's not just a brilliant designer; he's a great team player who genuinely makes our work better.</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Slesha</h3>
-                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder</p>
+                                            <h3 class="text-2xl lg:text-3xl">Daniel Mulé</h3>
+                                            <p class="text-sm uppercase tracking-widest lg:text-base">Founder, Bodega Cats of New York</p>
                                         </div>
                                     </div>
                                 </li>
