--- a/contact.html
+++ b/contact.html
@@ -75,19 +75,19 @@
                     <form id="contactForm">
                         <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                             <div class="sm:col-span-3">
-                                <label for="first-name" class="block text-2xl leading-6 tracking-wider text-white">First name <span class="text-red-500">*</span></label>
+                                <label for="first-name" class="block text-2xl leading-6 tracking-wider text-white">First Name <span class="text-red-500">*</span></label>
                                 <div class="mt-2">
                                     <input type="text" name="entry.2005620554" id="first-name" autocomplete="given-name" class="block w-full rounded-xl border border-transparent bg-zinc-800 p-4 text-lg text-white shadow-sm placeholder:text-gray-400 focus:border-zinc-600 focus:ring-0 sm:leading-6" required />
                                 </div>
                             </div>
                             <div class="sm:col-span-3">
-                                <label for="last-name" class="block text-2xl leading-6 tracking-wider text-white">Last name</label>
+                                <label for="last-name" class="block text-2xl leading-6 tracking-wider text-white">Last Name</label>
                                 <div class="mt-2">
                                     <input type="text" name="entry.1034851035" id="last-name" autocomplete="family-name" class="block w-full rounded-xl border border-transparent bg-zinc-800 p-4 text-lg text-white shadow-sm placeholder:text-gray-400 focus:border-zinc-600 focus:ring-0 sm:leading-6" />
                                 </div>
                             </div>
                             <div class="sm:col-span-3">
-                                <label for="email" class="block text-2xl leading-6 tracking-wider text-white">Email address <span class="text-red-500">*</span></label>
+                                <label for="email" class="block text-2xl leading-6 tracking-wider text-white">Email Address <span class="text-red-500">*</span></label>
                                 <div class="mt-2">
                                     <input id="email" name="entry.1045781291" type="email" autocomplete="email" class="block w-full rounded-xl border border-transparent bg-zinc-800 p-4 text-lg text-white shadow-sm placeholder:text-gray-400 focus:border-zinc-600 focus:ring-0 sm:leading-6" required />
                                 </div>
